Wrote some more

--- a/discussion.Rmd
+++ b/discussion.Rmd
@@ -68,31 +68,32 @@ Fourth, as will be discussed in more depth in Section \@ref(performance), while 
 
 Fifth and finally, there are also many opportunities for additional features in the client-server communication. For instance, the ability to render arbitrary graphical elements (e.g. computed regression lines) within existing `plotscaper` plots or figures would be highly beneficial. Similarly, features such as dynamically switching `Reducer`s or sending the underlying summary statistics to the server (similar to querying) warrant consideration. Furthermore, more fine-grained selection controls could also prove useful. mportantly, many of these features may be implementable relatively quickly, as the underlying infrastructure is already in place.
 
-### Declarative schemas {#declarative-schemas}
+### Declarative schemas and extensibility {#declarative-schemas}
 
-As discussed in Section \@ref(system), one limitation of the delivered system is the absence of a simple declarative schema-based approach for specifying plots. While declarative schemas, popularized by the Grammar of Graphics [GoG, @wilkinson2012], have become a highly popular in modern data visualization libraries [see e.g. @wickham2016; @satyanarayan2016; @plotly2023], my system deviates from this paradigm. Although certain core components within `plotscape` are modeled declaratively (as shown in Section \@ref(summaries)), the overall plot definitions remain largely procedural, and the user-facing API (`plotscaper`) relies on nominal plot types^[Currently there are six different types of plots implemented.]. 
+As discussed in Section \@ref(system), one limitation of the delivered system is the absence of a simple declarative schema-based approach for specifying plots. While declarative schemas, popularized by the Grammar of Graphics [GoG, @wilkinson2012], have become a highly popular in modern data visualization libraries [see e.g. @wickham2016; @satyanarayan2016; @plotly2023], my system deviates from this paradigm. Although certain core components within `plotscape` are modeled declaratively (as shown in Section \@ref(summaries)), the overall plot definitions remain largely procedural, and the user-facing API (`plotscaper`) relies on nominal plot types^[Currently there are six different types of plots implemented.]. While users familiar with TypeScript can still create new plot types using the underlying `plotscape` code, this approach does limit the extensibility of the software for R users.  
 
-However, as I argued in Section \@ref(variables-encodings), this lack of a full declarative plot specification is not unique to my system. Instead, I contend that many currently available declarative data visualization libraries provide partial or incomplete solutions, and frequently conceal or obscure key implementation details [see also @wu2024]. For instance, operations such as grouping, binning, stacking, and normalization are often passed implicitly. Put simply, there are gaps in the GoG-based model. To quote @wu2024:
+However, as I argued in Section \@ref(variables-encodings), the issue underlying this lack of a full declarative plot specification is not unique to my system. Instead, I contend that many currently available declarative data visualization libraries offer partial or incomplete solutions, and frequently conceal key implementation details [see also @wu2024]. For example, operations like grouping, binning, stacking, and normalization are frequently handled implicitly, with limited user control. In essence, there are gaps in the GoG model which, as far as I am aware, none of the currently available declarative data visualization libraries address. To quote @wu2024:
 
 > Despite these broad-ranging benefits, we observe that this [GoG-based] semantic delineation obscures the process of visual mapping in a way that makes it difficult to reason about visualizations and their relationships to user tasks.
 > 
-> We observe that the core reason for this dissonance between visualization specifications and functions is that the Visual Mapping step represents two distinct substeps. The first involves additional transformations over the data tables in order to compute, e.g., desired statistics and spatially place marks that are specific to the visualization design. We term these Design-specific Transformations. The second is the visual encoding that maps each row in the transformed table to a mark and data attributes to mark attributes using simple
-scaling functions.
+> We observe that the core reason for this dissonance between visualization specifications and functions is that the Visual Mapping step represents two distinct substeps. The first involves additional transformations over the data tables in order to compute, e.g., desired statistics and spatially place marks that are specific to the visualization design. We term these Design-specific Transformations. The second is the visual encoding that maps each row in the transformed table to a mark and data attributes to mark attributes using simple scaling functions.
 
-During the course of my project, I have independently reached several conclusions which similar to those of @wu2024^[I became aware of Eugene Wu's work only after he contacted me concerning the publication of a paper I co-authored during this project's development: @bartonicek2024]. I did try to come up with a way of specifying declarative schemas for interactive graphics, however, despite some partial successes (see Section \@ref(aggregation-summaries)), ultimately, I was not able to come up with a comprehensive model. I chose to make this implementation gap explicit in `plotscaper`. However, I believe I have also been able to identify three key factors which contribute to the difficulty of developing declarative schemas for interactive data visualization, and these are detailed below. 
+During the course of my project, I have independently reached several conclusions similar to those of @wu2024^[I became aware of Eugene Wu's work only after he contacted me concerning the publication of a paper I co-authored during this project's development: @bartonicek2024]. Most importantly, I have also come to the conclusion that separating the aggregation (Design-specific Transformation) and scaling (visual encoding) stages is highly desirable. By mapping data variables directly onto aesthetics, most declarative data visualization libraries entangle these two concepts together, hindering efficient and generic implementation of interactive features like representation switching.
 
-The first factor which complicates declarative schemas in interactive graphics is the weak correspondence between data variables and visual encodings. Specifically, as discussed in Section \@ref(variables-encodings), often, what we plot are *not* variables found in the original data, but instead variables which have been computed or derived in some way. This is exists even in static graphics; however, it is further amplified in interactive graphics, where dynamic remapping of variables to aesthetics is often desirable (such as when transforming a barplot to a spineplot). Thus, directly mapping data variables to aesthetics seems to be an inadequate approach. However, to map derived variables to aesthetics, we have to explicitly specify *what* we compute and *how*. For example, to fully specify a histogram, we have to describe the fact that we want to bin cases based on some continuous variable, compute the counts within bins, stack these counts, also within bins, and finally map the bin borders to the x-axis variable and the counts to the y-axis variable. While I have been able to get reasonably far with providing a mechanism for specifying declarative schema for this process (see Section \@ref(variables-encodings)), ultimately, I was not able to integrate it with the rest of the system without some amount of procedural code.
+However, specifying declarative schemas for separate aggregation and visual encoding stages presents challenges. While working on `plotscaper`, I attempted to devise a method for specifying these schemas, but despite some partial successes (see Section \@ref(aggregation-summaries)), a truly comprehensive solution ultimately eluded me. I opted to make this implementation gap explicit in `plotscaper` by specifying plots nominally. Nevertheless, I believe that a useful outcome of this effort is that I have been able to identify three key factors which contribute to this difficulty of developing declarative schemas for interactive data visualization, and these are detailed below. 
 
-The second factor which presents a challenge to declarative schemas in interactive data visualization is the hierarchical nature of graphics itself (see Section \@ref(hierarchy)). Specifically, while in static graphics, we can often act as if the data underlying our plots is "flat", interactivity necessitates hierarchical data structures. Interactive features like linked selection and parametric manipulation trigger updates to summary statistics, requiring hierarchical organization for efficient updates, especially with features like stacking and normalization (see Sections \@ref(transforming-summaries) and \@ref(aggregation-summaries)). Furthermore, hierarchical data can also be leveraged to provide more efficient scale and axis updates (see Section \@ref(plot-scales)), and display more information during querying (e.g., by displaying summary statistics for both objects and segments). However, specifying declarative schemas with hierarchical data is inherently more complex than with flat data, due to both increased surface area (multiple data sets) and hierarchical dependencies. In `plotscape`, these hierarchical dependencies are represented by aggregated variables with references to parent variables (and factors/reducers), which can be leveraged by specialized operators such as `Reduced.stack` and `Reduced.normalize`, see Section \@ref(aggregation-summaries). An alternative, unexplored approach could be to partially "flatten" the hierarchical structure via SQL-like table joins (i.e. adding parent data as new columns with repeated values). However, with multiple levels of partitioning, this approach may become unwieldy^[I.e., the data would have to contain columns such `value`, `parent_value`, `parent_parent_value`, etc...], and there are other considerations, such as the necessity for variables to "remember" how they have been aggregated (see Sections \@ref(aggregation) and \@ref(aggregation-summaries)), and the reactive propagation of updates, which make completely flat data tables inadequate. 
+The first factor which complicates declarative schemas in interactive graphics is the already mentioned weak correspondence between data variables and visual encodings. Specifically, as discussed in Section \@ref(variables-encodings), often, what we plot are *not* variables found in the original data, but instead variables which have been computed or derived in some way. This is exists even in static graphics; however, it is further amplified in interactive graphics, where dynamic remapping of variables to aesthetics is often desirable (such as when transforming a barplot to a spineplot). Thus, directly mapping data variables to aesthetics seems to be an inadequate approach. However, to map derived variables to aesthetics, we have to explicitly specify *what* we compute and *how*. For example, to fully specify a histogram, we have to describe the fact that we want to bin cases based on some continuous variable, compute the counts within bins, stack these counts, also within bins, and finally map the bin borders to the x-axis variable and the counts to the y-axis variable. While I have been able to get reasonably far with providing a mechanism for specifying declarative schema for this process (see Section \@ref(variables-encodings)), ultimately, I was not able to integrate it with the rest of the system without some amount of procedural code.
 
-The third and final factor which makes declarative schemas challenging is reactivity. Interactive visualizations need to, by definition, respond to user input. However, this input can impact various stages of the data visualization pipeline differently. For instance, while shrinking or growing the size of points in a scatterplot is a purely graphical computation, shrinking or growing the width of histogram bins requires recomputation of the underlying data. Consequently, the declarative schema should be able to handle reactive parameters which may have hierarchical dependencies. Signals (see Section \@ref(signals)) may offer a hypothetical general solution; however, as discussed in Section \@ref(reactivity-solution), my experience with developing `plotscape` revealed that reactivity typically tends to enter the visualization process at discrete points, corresponding to the four stages of the data visualization pipeline. While I did not manage to develop a general declarative mechanism for this, the following list outlines the identified hypothetical points of reactivity:
+The second factor which presents a challenge to declarative schemas in interactive data visualization is the hierarchical nature of graphics (see Section \@ref(hierarchy)). Specifically, while in static graphics, we can often act as if the data underlying our plots is "flat", interactivity necessitates hierarchical data structures. Interactive features like linked selection and parametric manipulation trigger updates to summary statistics, requiring hierarchical organization for efficient updates, especially when features like stacking and normalization are present (see Sections \@ref(transforming-summaries) and \@ref(aggregation-summaries)). Furthermore, hierarchical data can also be leveraged to provide more efficient scale and axis updates (see Section \@ref(plot-scales)), and display multiple levels of information during querying (e.g. displaying summary statistics for both objects and segments). However, specifying declarative schemas with hierarchical data is inherently more challenging than with flat data, due to both increased surface area (multiple data sets) and hierarchical dependencies. Currently, in `plotscape`, these hierarchical dependencies are represented by aggregated variables having references to parent-level variables, factors over which they have been computed, and the reducers which had been used to compute them. These references can then be leveraged by specialized operators such as `Reduced.stack` and `Reduced.normalize`, see Section \@ref(aggregation-summaries). An alternative, unexplored approach could be to partially "flatten" this hierarchical structure via SQL-like table joins (i.e. storing a secondary key to parent data and left-joining). However, the issue of each aggregated variable having to "remember" additional metadata, such as the factor cardinality and aggregation strategy (see Sections \@ref(aggregation) and \@ref(aggregation-summaries)), still remains.
+
+The third and final factor which makes declarative schemas challenging is reactivity. Interactive visualizations need to, by definition, respond to user input; however, what complicates the issue is that the input may affect different stages of the data visualization pipeline, and changes need to be propagated accordingly. For instance, while shrinking or growing the size of points in a scatterplot is a purely graphical computation, shrinking or growing the width of histogram bins requires recomputation of the underlying data, which has downstream effects on the rest of the visualization. Therefore, any declarative schema which wants to incorporate reactivity needs to be able to handle reactive parameters with hierarchical dependencies. While signals (see Section \@ref(signals)) may offer one possible general solution, as discussed in Section \@ref(reactivity-solution), while developing `plotscape` I found the developer ergonomics of signals lacking. Furthermore, I eventually reached the conclusion that most of desired reactivity could be effectively integrated at specific, discrete points within the four stages of the data visualization pipeline. Together with the rest of the pipeline, these points would form form a linear dependency chain, greatly simplifying the reactive graph. Although I did not manage to develop a general declarative mechanism for specifying reactive parameters in this way in time, the following list identifies these potential entry points of reactivity:
 
 - Pre-partitioning: Data streaming, partitioning parameter updates (e.g. histogram bin width, selection)
 - Pre-aggregation: Aggregation parameter updates (e.g. regression line regularization)
 - Pre-scaling: Scale parameter updates (e.g. sorting, size/alpha adjustments)
 - Pre-rendering: Surface-level changes (e.g. layout modifications, DOM resize events)
 
-To summarize, modeling interactive data visualizations declaratively presents significant challenges. Specifically, the weak correspondence between data variables and aesthetics, the inherent hierarchical nature of graphics, and the necessity for reactive updates make the seemingly appealing model of "assign variable $x$ to aesthetic $y$" inadequate for capturing a wide range of popular interactive graphics. These issues are not unique to `plotscaper`
+To summarize, modeling interactive data visualizations declaratively presents significant challenges. Specifically, the weak correspondence between data variables and aesthetics, the inherent hierarchical nature of graphics, and the presence of reactive parameters make the seemingly appealing model of "assign variable $x$ to aesthetic $y$" inadequate for implementing many popular interactive graphics efficiently. Importantly, I contend that these issues are not unique to `plotscaper` and extend to other data visualization systems as well. While a truly general solution may require a significant amount of work, I hope that, by identifying and classifying these issues, this thesis provides insights that may be capitalized on by future research. 
 
 ### Performance {#performance}
 
